# django-multi-pos

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
.github/workflows/: django-app.yml
branches/: admin.py  apps.py  models.py  serializers.py
branches/migrations/: 0001_initial.py  0002_auto_20200827_1613.py  0003_userbranch.py  0004_auto_20200828_2206.py  0005_auto_20200829_1400.py
branches/tests/: test_user_creation.py
branches/tests/factories/: branch_factory.py  branch_user_factory.py  company_factory.py  user_factory.py
branches/viewsets/: branch_viewset.py  company_viewset.py
entities/: company.py  user.py
items/: admin.py  models.py  serializers.py
items/migrations/: 0001_initial.py  0002_auto_20200831_1259.py
items/viewsets/: item_viewset.py
multipos/: asgi.py  settings.py  urls.py  wsgi.py
multipos/utils/: user_serializer.py
repositories/: company_repository.py  users_repository.py
tests/: conftest.py
tests/repository/: test_company_repository.py  test_user_repository.py
tests/rest/: test_user_api_rest.py
tests/usecases/: test_signup_use_case.py
usecases/: user_signup.py
usecases/company/: register_company.py
usecases/utils/: requests.py  responses.py
users/: models.py  permissions.py
users/migrations/: 0001_initial.py  0002_auto_20200830_0016.py  0003_create_user_groups.py  0004_auto_20200831_1247.py
users/viewsets/: user_viewset.py
webservice/: models.py  permissions.py  status_codes.py
webservice/migrations/: 0001_initial.py
webservice/views/: user_views.py
